--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,17 +1,19 @@
 <div class="col-md-12">
   <h1><%= @album.name %> by
       <%= link_to @album.band.name, band_url(@album.band) %></h1>
+  <p><%= album_type_description(@album) %></p>
 
   <h2>Tracks</h2>
   <ul class="list-group">
     <% @tracks.each do |track| %>
       <li class="list-group-item">
-        <%= track.name %>
+        <%= link_to track.name, track_url(track) %>
       </li>
     <% end %>
   </ul>
 
   <%= link_to 'Edit Album', edit_album_url(@album), class: 'btn btn-info' %>
+  <%= link_to 'Add Track', new_album_track_url(@album), class: 'btn btn-success' %>
   <%= button_to 'Delete Album', album_url(@album),
       method: :delete, class: 'btn btn-danger' %>
 </div>
