Add notes to tracks.

--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -37,5 +37,6 @@
     <% end %>
   </div>
 
-  <input type="submit" value="<%= album_submit_text(album) %>">
+  <input type="submit" value="<%= album_submit_text(album) %>"
+         class="btn btn-success">
 </form>
