--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -12,5 +12,6 @@
            id="band_name" value="<%= band.name %>">
   </div>
 
-  <input type="submit" value="<%= band_submit_text(band) %>">
+  <input type="submit" value="<%= band_submit_text(band) %>"
+         class="btn btn-success">
 </form>
