--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -12,6 +12,16 @@
     <%= simple_format(@track.lyrics) %>
   <% end %>
 
+  <h2>Add a Note</h2>
+  <%= render 'notes/form', track: @track, note: @note %>
+
+  <% if @track.notes.any? %>
+    <h2>All Notes</h2>
+    <ul class="list-group">
+      <%= render @track.notes %>
+    </ul>
+  <% end %>
+
   <%= link_to 'Edit Track', edit_track_url(@track),
       class: 'btn btn-info' %>
   <%= button_to 'Delete Track', track_url(@track),
