--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,5 +22,6 @@
     </div>
   </div>
 
-  <input type="submit" value="<%= user_submit_text(user) %>">
+  <input type="submit" value="<%= user_submit_text(user) %>"
+         class="btn btn-success">
 </form>
