Add admin flag to users. Restrict creating, updating, and deleting important resources to admin-only.

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -9,5 +9,8 @@
     <% end %>
   </ul>
 
-  <%= link_to 'Add Band', new_band_url, class: 'btn btn-success' %>
+  <% if user_is_admin? %>
+    <%= link_to 'Add Band', new_band_url, class: 'btn btn-success' %>
+    <%= link_to 'View Users', users_url, class: 'btn btn-info' %>
+  <% end %>
 </div>
