--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -12,8 +12,11 @@
     <% end %>
   </ul>
 
-  <%= link_to 'Edit Album', edit_album_url(@album), class: 'btn btn-info' %>
-  <%= link_to 'Add Track', new_album_track_url(@album), class: 'btn btn-success' %>
-  <%= button_to 'Delete Album', album_url(@album),
-      method: :delete, class: 'btn btn-danger' %>
+  <% if user_is_admin? %>
+    <%= link_to 'Edit Album', edit_album_url(@album), class: 'btn btn-info' %>
+    <%= link_to 'Add Track', new_album_track_url(@album),
+        class: 'btn btn-success' %>
+    <%= button_to 'Delete Album', album_url(@album),
+        method: :delete, class: 'btn btn-danger' %>
+  <% end %>
 </div>
