--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -3,8 +3,10 @@
 <form action="<%= track_notes_url(track) %>" method="post" accept-charset="utf-8">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-  <label for="note_body">Body</label>
-  <textarea id="note_body" name="note[body]"><%= note.body %></textarea>
+  <div class="form-group">
+    <label for="note_body">Body</label>
+    <textarea id="note_body" name="note[body]"><%= note.body %></textarea>
+  </div>
 
   <p>
     <input type="submit" value="Add Note" class="btn btn-success">
